RESOLVED FIXED282738
[Win] WebKitBuild\Debug\JavaScriptCore\DerivedSources\AirOpcodeGenerated.h(220,18): error: no member named '_rotr' in 'JSC::B3::Air::Opcode'
https://bugs.webkit.org/show_bug.cgi?id=282738
Summary [Win] WebKitBuild\Debug\JavaScriptCore\DerivedSources\AirOpcodeGenerated.h(22...
Fujii Hironori
Reported 2024-11-06 20:52:33 PST
Non unified source builds fail for Winodws port > build-webkit --debug --no-unified-builds In file included from C:\webkit\wb\Source\JavaScriptCore\b3\air\AirGenerated.cpp:31: C:\webkit\wb\WebKitBuild\Debug\JavaScriptCore\DerivedSources\AirOpcodeGenerated.h(220,18): error: no member named '_rotr' in 'JSC::B3::Air::Opcode' 220 | case Opcode::RotateRight32: | ~~~~~~~~^ C:\Program Files (x86)\Windows Kits\10\\include\10.0.22621.0\\um\winnt.h(1117,23): note: expanded from macro 'RotateRight32' 1117 | #define RotateRight32 _rotr | ^ In file included from C:\webkit\wb\Source\JavaScriptCore\b3\air\AirGenerated.cpp:31: C:\webkit\wb\WebKitBuild\Debug\JavaScriptCore\DerivedSources\AirOpcodeGenerated.h(223,18): error: no member named '_rotr64' in 'JSC::B3::Air::Opcode' 223 | case Opcode::RotateRight64: | ~~~~~~~~^
Attachments
Fujii Hironori
Comment 1 2024-11-06 20:53:00 PST
Is push_macro added by https://commits.webkit.org/280777@main causing a problem?
Fujii Hironori
Comment 2 2024-11-06 21:09:32 PST
<windows.h> is included after the push_macro in unified source builds.
Fujii Hironori
Comment 3 2024-11-06 21:23:38 PST
EWS
Comment 4 2024-11-07 11:59:03 PST
Committed 286296@main (39d7d8533ecc): <https://commits.webkit.org/286296@main> Reviewed commits have been landed. Closing PR #36311 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2024-11-07 12:00:17 PST
Note You need to log in before you can comment on or make changes to this bug.