[B3] non-unified Windows builds fail due to the system defined `RotateRight32` macro https://bugs.webkit.org/show_bug.cgi?id=282738

Unreviewed build fix for non-unified Windows builds.
<https://commits.webkit.org/280777@main> added "#undef RotateRight32"
for the problem. But, in unified source builds, it didn't work as
expected because <windows.h> was included after that.

Include <windows.h> in JavaScriptCorePrefix.h.

* Source/JavaScriptCore/JavaScriptCorePrefix.h:

Canonical link: https://commits.webkit.org/286296@main