Source/JavaScriptCore/JavaScriptCorePrefix.h
@@ -54,6 +54,10 @@
 #include <sys/types.h>
 #endif
 
+#if OS(WINDOWS)
+#include <windows.h>
+#endif
+
 #ifdef __cplusplus
 #include <chrono>
 #include <functional>
